updated the name of the project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "superheroes",
+  "name": "superheroesss-vik",
   "version": "1.0.0",
   "description": "This library shall provide a list of superherores or a random superhero",
   "main": "src/index.js",
